# priivate_llm

./: README.md  pyproject.toml  setup.sh
src/: llm_classifier.py  llm_classifier_train_evaluate.py  llm_summarizer.py  train_llm_summarizer.py
src/configs/: classifier.toml  summarizer.toml
src/data/: clean_resumes.json  train_data.json
src/data/sample_resumes/: 10030015_Resume.txt  10089434_Resume.txt  10219099_Resume.txt  10247517_Resume.txt  10265057_Resume.txt  10553553_Resume.txt
src/data/sample_summarizer_io/: input_resume  output_summary
