[tool.poetry]
name = "private_llm"
version = "0.1.0"
description = ""
authors = ["chashi-mahiul-islam-bd <ci20l@my.fsu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
scipy = "1.9.0"
click = "^8.1.6"
toml = "^0.10.2"
ipywidgets = "^8.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
